test/errors/error4.vult
fun foo() {
   _ = foo:foo;
}
